# ecs-task

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  ecs_task.py  pyproject.toml  tests.py
.github/workflows/: test.yml
