[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "ecs_task"
author = "Peter Baumgartner"
author-email = "pete@lincolnloop.com"
home-page = "https://github.com/lincolnloop/ecs-task"
description-file = "README.md"
dist-name = "ecs-task"
keywords = "ecs,task,service,aws,container,deploy,rollback"
requires=[
    "boto3",
    "typing; python_version == '2.7'",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
]

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
]

[tool.flit.sdist]
exclude = [
    ".dockerignore",
    ".gitignore",
    "CHANGELOG.md",
    "Dockerfile",
    "docker-compose.yml",
    "tests.py",
]